fix an overlapping issue

--- a/styles/topnav.css
+++ b/styles/topnav.css
@@ -40,6 +40,7 @@
     top: 0;
     min-height: 48px;
     font-family: 'Trebuchet MS';
+    z-index: 1000;
 }
 
 .topnav a {
